// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Main] should match empty selection snapshot 1`] = `
<div>
  <main
    class="min-h-screen undefined"
    id="main"
  >
    <div
      class="container flex min-h-screen flex-col items-center justify-center bg-slate-50 "
      id="welcome-view"
    >
      <div
        class="container max-w-xs"
      >
        <svg
          class="h-auto w-full fill-indigo-700"
        />
      </div>
      <div
        class="text-4xl font-bold"
      >
        Interceptor
      </div>
      <button
        class="my-6 rounded bg-indigo-700 px-9 py-3 text-sm font-semibold text-white hover:opacity-75 active:opacity-100"
        title="Add intercept"
      >
        Add Intercept
      </button>
    </div>
  </main>
</div>
`;

exports[`[Main] should match intercept selection snapshot 1`] = `
<div>
  <main
    class="min-h-screen undefined"
    id="main"
  >
    Not implemented yet
  </main>
</div>
`;

exports[`[Main] should match request selection snapshot 1`] = `
<div>
  <main
    class="min-h-screen undefined"
    id="main"
  >
    Not implemented yet
  </main>
</div>
`;
